--- a/src/scss/components/_components-dir.scss
+++ b/src/scss/components/_components-dir.scss
@@ -2,6 +2,7 @@
 // Components Directory
 // ============================================
 
+@import 'hero';
 @import 'hero-accueil';
 @import 'card-cible';
 @import 'reassurance';
@@ -12,3 +13,11 @@
 @import 'listing-blog';
 @import 'bandeau-contact';
 @import 'megamenu';
+@import 'texte-image';
+@import 'profils-equipe';
+@import 'mission-categories';
+@import 'liste-expertise-avec-filtre';
+@import 'liste-realisations-avec-filtre';
+@import 'temoignage';
+@import 'listing-process';
+@import 'liste-expertise';
