--- a/src/scss/globals/_body.scss
+++ b/src/scss/globals/_body.scss
@@ -1,15 +1,11 @@
 body {
-  &.front {
-    padding-top: 134px;
-  }
-
   font-size: 14px;
   color: $bleu-principal;
-}
 
-@include media-breakpoint-down(xxl) {
-  body {
-    &.front {
+  &.front {
+    padding-top: 134px;
+
+    @media only screen and (max-width: 1399px) {
       padding-top: 60px;
     }
   }
@@ -18,23 +14,56 @@ body {
 h1 {
   font-size: 54px;
   font-weight: 500;
-  line-height: 1.1;
+  line-height: 1.05;
   margin-bottom: 2rem;
 }
 
-/* Auteur */
+// ============================================
+// Title Heading
+// ============================================
+
+.title-heading {
+  margin-bottom: 40px;
+
+  h1 {
+    font-size: 54px;
+    font-weight: 500;
+    line-height: 1.05;
+    color: $bleu-principal;
+    margin-bottom: 20px;
+
+    @media only screen and (max-width: 991px) {
+      font-size: 36px;
+    }
+
+    @media only screen and (max-width: 575px) {
+      font-size: 28px;
+    }
+  }
+}
+
+// ============================================
+// Blog Author
+// ============================================
+
 .blog-card-author {
   display: flex;
   align-items: center;
   gap: 12px;
 }
 
-.blog-author-avatar {
+.blog-author-avatar,
+img.avatar.avatar-40.photo {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
   flex-shrink: 0;
+
+  @media only screen and (max-width: 575px) {
+    width: 36px;
+    height: 36px;
+  }
 }
 
 .blog-author-info {
@@ -43,17 +72,15 @@ h1 {
   gap: 2px;
 }
 
-img.avatar.avatar-40.photo {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-
 .blog-author-name {
   font-size: 14px;
   font-weight: 700;
   color: #05354e;
   line-height: 1.4;
+
+  @media only screen and (max-width: 575px) {
+    font-size: 13px;
+  }
 }
 
 .blog-author-date {
@@ -61,71 +88,76 @@ img.avatar.avatar-40.photo {
   color: #05354e;
   line-height: 1.4;
   font-weight: 500;
-}
-main#main-content {
-  padding-top: 200px;
-  background-color: $bg;
-}
 
-/* Small devices (≥ 576px) */
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
-  .blog-author-avatar {
-    width: 36px;
-    height: 36px;
-  }
-
-  .blog-author-name {
-    font-size: 13px;
-  }
-
-  .blog-author-date,
-  .blog-reading-time {
+  @media only screen and (max-width: 575px) {
     font-size: 12px;
   }
+}
 
-  .title-heading .h2,
-  .title-heading h2 {
-    font-size: 32px;
-  }
-  .title-heading .h2,
-  .title-heading h2 {
-    font-size: 28px;
+.blog-reading-time {
+  @media only screen and (max-width: 575px) {
+    font-size: 12px;
   }
 }
 
-/* Medium devices (≥ 768px) */
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
+// ============================================
+// Main Content
+// ============================================
+
+main#main-content {
+  padding-top: 140px;
+  background-color: $bg;
+
+  @media only screen and (max-width: 1199px) {
+    padding-top: 100px;
   }
 }
 
-/* Large devices (≥ 992px) */
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
+.title-heading h2 {
+  font-size: 42px;
+  font-weight: 600;
+}
+svg.triangle-icon {
+  width: 11px;
+  height: 12px;
 }
 
-/* Extra Large devices (≥ 1200px) */
-@media (min-width: 1200px) {
-  .container {
+// ============================================
+// Container Max-Width (Mobile First inversé)
+// ============================================
+
+.container {
+  // Default (≥1400px)
+  max-width: 1320px;
+
+  // Extra Large devices (< 1400px)
+  @media only screen and (max-width: 1399px) {
     max-width: 1140px;
   }
-}
 
-/* Extra Extra Large devices (≥ 1400px) */
-@media (min-width: 1400px) {
-  .container {
-    max-width: 1320px;
+  // Large devices (< 1200px)
+  @media only screen and (max-width: 1199px) {
+    max-width: 960px;
   }
-}
 
-@media only screen and (max-width: 1199px) {
-  main#main-content {
-    padding-top: 100px;
+  // Medium devices (< 992px)
+  @media only screen and (max-width: 991px) {
+    max-width: 720px;
+    .title-heading h2 {
+      font-size: 30px;
+      font-weight: 600;
+    }
+  }
+
+  // Small devices (< 768px)
+  @media only screen and (max-width: 767px) {
+    max-width: 540px;
+  }
+
+  // Extra Small devices (< 576px)
+  @media only screen and (max-width: 575px) {
+    max-width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
